Fix a layout bug

--- a/scss/objects/components/_menuPannel.scss
+++ b/scss/objects/components/_menuPannel.scss
@@ -123,7 +123,7 @@
     }
 
     &.--nailFootcare {
-      height: 42rem;
+      height: 48rem;
 
       @media (min-width: breakpoint("md")) {
         height: 24rem;
